allprojects  {
  apply plugin: 'maven'
  apply plugin: 'eclipse'
  group = 'net.sandius.rembulan'
  version = '0.3-SNAPSHOT'
}

subprojects {
  apply plugin: 'java'

  sourceCompatibility = 11
  targetCompatibility = 11

  repositories {
    mavenLocal()

    maven { url "http://repo.maven.apache.org/maven2" }
  }
  
  task sourceJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
  }
  
  artifacts {
    archives sourceJar
  }
  
  tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
  }

}
